--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,30 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "name": "robert-yarborough",
+  "description": "UI/UX Portfolio",
   "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
-  "license": "MIT",
+  "homepage": "https://github.com/bobby5develops/robert-yarborough",
+  "license": "y",
   "private": true,
   "dependencies": {
     "angular": "~1.4.0",
     "angular-route": "~1.4.0",
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
-    "html5-boilerplate": "~5.2.0"
-  }
+    "html5-boilerplate": "~5.2.0",
+    "bootstrap-sass-official": "3.2.0",
+    "jquery": "~v2.1.4"
+  },
+  "main": "",
+  "moduleType": [],
+  "authors": [
+    "Robert Yarborough"
+  ],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "app/bower_components",
+    "test",
+    "tests"
+  ]
 }
