--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "angular-seed",
+  "name": "robert-yarborough",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/angular/angular-seed.git"
+  },
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.1",
+    "grunt": "^0.4.5",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
     "http-server": "^0.6.1",
     "jasmine-core": "^2.3.4",
     "karma": "~0.12",
@@ -19,20 +25,33 @@
   },
   "scripts": {
     "postinstall": "bower install",
-
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1",
-
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
     "test-single-run": "karma start karma.conf.js  --single-run",
-
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
-
     "preprotractor": "npm run update-webdriver",
     "protractor": "protractor e2e-tests/protractor.conf.js",
-
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/angular/angular-seed/issues"
+  },
+  "homepage": "https://github.com/angular/angular-seed#readme",
+  "main": "index.html",
+  "dependencies": {
+    "bower": "^1.6.5",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma": "^0.12.37",
+    "karma-jasmine": "^0.3.6",
+    "http-server": "^0.6.1",
+    "karma-junit-reporter": "^0.2.2",
+    "jasmine-core": "^2.3.4",
+    "protractor": "^2.5.1",
+    "shelljs": "^0.2.6"
+  },
+  "author": "Robert Yarborough"
 }
